--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Metaball</title>
+    <title>Metaballs</title>
 
     <link rel="stylesheet" href="styles.css">
     <script src="main.js"></script>
 </head>
 
 <body>
-    <h1>Metaball</h1>
+    <h1>Metaballs</h1>
     <div>
         <canvas id="cvs"></canvas>
         <br>
