--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Metaballs</title>
 
     <link rel="stylesheet" href="styles.css">
-    <script src="main.js"></script>
+    <script src="./src/main.js" type="module"></script>
 </head>
 
 <body>
